syntax = "proto3";

package grpcapi;

service Hierarchy {
  rpc DeepPing (PrimitiveVoid) returns (PrimitiveString) {}

  rpc GetNode (PrimitiveString) returns (Node) {}
  rpc GetNodes (PrimitiveString) returns (Nodes) {}
  rpc GetChildNodes (PrimitiveString) returns (Nodes) {}
  rpc GetParentNode (PrimitiveString) returns (Node) {}
  rpc GetAncestors (GetAncestorsInput) returns (GetAncestorsOutput) {}

  rpc GetNodeIdByOrigin (Origin) returns (PrimitiveString) {}

  rpc SaveNode (SaveNodeInput) returns (PrimitiveString) {}
  rpc DeleteNode (DeleteNodeInput) returns (PrimitiveVoid) {}

  rpc GetEvents (GetEventsInput) returns (GetEventsOutput) {}
  
  rpc GetFaultFrequencies(PrimitiveString) returns (FaultFrequencies) {}
  rpc SetFaultFrequencies(FaultFrequencies) returns (PrimitiveVoid) {}  
}

message Origin {
  string id = 1;
  string type = 2;
  string provider = 3;
}

message MeasurementPoint {
  string angular = 1;
  int32 bearing = 3;
  string measurementType = 4;
  string shaft = 5;
  string shaftSide = 6;
}

enum ValueType {
  NUMERIC = 0;
  SINGLE_CHOICE = 1;
  MULTI_CHOICE = 2;
}

message InspectionPoint {
  string OBSOLETE_valueType = 1;
  ValueType valueType = 4;
  string numericUnit = 2;
  repeated string answers = 3;
}

message AssetNode {
  string criticality = 1;
}

message Node {
  string id = 1;
  string label = 2;
  string description = 3;
  string type = 4;
  string criticality = 5;
  string subType = 6;
  Origin origin = 7;

  AssetNode assetNode = 8;
  MeasurementPoint measurementPoint = 9;
  InspectionPoint inspectionPoint = 10;
}

message Nodes {
  repeated Node nodes = 1;
}

message GetEventsInput {
  int64 since = 1;
  PrimitiveInt32 limit = 2;
}

message GetEventsOutput {
  bytes events = 1;
}

message SaveNodeInput {
  string userId = 1;
  Node node = 3;
  string parentId = 2;
  Origin parentOrigin = 4;
}

message DeleteNodeInput {
  string userId = 1;
  string nodeId = 2;
  Origin origin = 3;
}

message GetAncestorsInput {
  string node_id = 1;
}

message GetAncestorsOutput {
  repeated AncestorNode nodes = 1;
}

message AncestorNode {
  string id = 1;
  Origin origin = 2;
  string label = 3;
  string description = 4;
  string type = 5;
  string subType = 6;
  string parentId = 7;
}

message FaultFrequencies {
  string nodeId = 1;
  repeated FaultFrequency faultfrequencies = 2;
}

message FaultFrequency {
  string id = 1;
  string name = 2;
  string description = 3;
  string manufacturer = 4;
  string familyType = 5;
  double BPFO = 6;
  double BPFI = 7;
  double BSF = 8;
  double FTF = 9;
  double RPM  = 10;
  int32 type = 11;
  int32 multiple = 12;
  int32 bandwidth = 13;
}

message PrimitiveString {
  string value = 1;
}

message PrimitiveInt32 {
  int32 value = 1;
}

message PrimitiveBytes {
  bytes value = 1;
}

message PrimitiveVoid {}
